--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<version>5.1.1.Final</version>
 		</dependency>
 
+	<dependency>
+		<groupId>javax.ejb</groupId>
+		<artifactId>ejb-api</artifactId>
+		<version>3.0</version>
+	</dependency>
+		
 
 	</dependencies>
 	<build>
