--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,6 +18,7 @@
   
   	<context-param>
 		<param-name>primefaces.THEME</param-name>
+<!-- 		<param-value>none</param-value> -->
 		<param-value>humanity</param-value>
 	</context-param>
   
