--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,7 +19,7 @@
   	<context-param>
 		<param-name>primefaces.THEME</param-name>
 <!-- 		<param-value>none</param-value> -->
-		<param-value>humanity</param-value>
+		<param-value>start</param-value>
 	</context-param>
   
 </web-app>
