--- a/pom.xml
+++ b/pom.xml
@@ -44,17 +44,27 @@
 			<version>5.1.1.Final</version>
 		</dependency>
 
-	<dependency>
-		<groupId>javax.ejb</groupId>
-		<artifactId>ejb-api</artifactId>
-		<version>3.0</version>
-	</dependency>
-	
-	<dependency>
-	<groupId>jdom</groupId>
-	<artifactId>jdom</artifactId>
-	<version>1.1</version>
-    </dependency>	
+		<dependency>
+			<groupId>javax.ejb</groupId>
+			<artifactId>ejb-api</artifactId>
+			<version>3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>1.1</version>
+		</dependency>
+<dependency>
+	<groupId>org.primefaces.extensions</groupId>
+	<artifactId>all-themes</artifactId>
+	<version>1.0.8</version>
+</dependency>
+<dependency>
+	<groupId>rome</groupId>
+	<artifactId>rome</artifactId>
+	<version>0.9</version>
+</dependency>
 
 	</dependencies>
 	<build>
