--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,8 +18,8 @@
   
   	<context-param>
 		<param-name>primefaces.THEME</param-name>
-<!-- 		<param-value>none</param-value> -->
-		<param-value>start</param-value>
+<!--  		<param-value>start</param-value> -->
+ 		<param-value>none</param-value>
 	</context-param>
   
 </web-app>
