--- a/.classpath
+++ b/.classpath
@@ -1,21 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry including="**/*.java" kind="src" path="src"/>
+	<classpathentry kind="var" path="M2_REPO/javax/faces/javax.faces-api/2.2/javax.faces-api-2.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/javax/validation/validation-api/1.1.0.Final/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/javax/ejb/ejb-api/3.0/ejb-api-3.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hibernate/javax/persistence/hibernate-jpa-2.1-api/1.0.0.Final/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-entitymanager/4.3.6.Final/hibernate-entitymanager-4.3.6.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.3.GA/jboss-logging-3.1.3.GA.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging-annotations/1.2.0.Beta1/jboss-logging-annotations-1.2.0.Beta1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-core/4.3.6.Final/hibernate-core-4.3.6.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/transaction/jboss-transaction-api_1.2_spec/1.0.0.Final/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hibernate/common/hibernate-commons-annotations/4.0.5.Final/hibernate-commons-annotations-4.0.5.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/javassist/javassist/3.18.1-GA/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/jandex/1.1.0.Final/jandex-1.1.0.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/postgresql/postgresql/9.3-1100-jdbc41/postgresql-9.3-1100-jdbc41.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/primefaces/5.1/primefaces-5.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-validator/5.1.1.Final/hibernate-validator-5.1.1.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/fasterxml/classmate/1.0.0/classmate-1.0.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jdom/jdom/1.1/jdom-1.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/extensions/all-themes/1.0.8/all-themes-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/afterdark/1.0.8/afterdark-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/afternoon/1.0.8/afternoon-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/afterwork/1.0.8/afterwork-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/black-tie/1.0.8/black-tie-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/blitzer/1.0.8/blitzer-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/bluesky/1.0.8/bluesky-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/bootstrap/1.0.8/bootstrap-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/casablanca/1.0.8/casablanca-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/cruze/1.0.8/cruze-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/cupertino/1.0.8/cupertino-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/dark-hive/1.0.8/dark-hive-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/dot-luv/1.0.8/dot-luv-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/eggplant/1.0.8/eggplant-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/excite-bike/1.0.8/excite-bike-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/flick/1.0.8/flick-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/glass-x/1.0.8/glass-x-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/hot-sneaks/1.0.8/hot-sneaks-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/humanity/1.0.8/humanity-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/le-frog/1.0.8/le-frog-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/midnight/1.0.8/midnight-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/mint-choc/1.0.8/mint-choc-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/overcast/1.0.8/overcast-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/pepper-grinder/1.0.8/pepper-grinder-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/redmond/1.0.8/redmond-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/rocket/1.0.8/rocket-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/sam/1.0.8/sam-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/smoothness/1.0.8/smoothness-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/south-street/1.0.8/south-street-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/start/1.0.8/start-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/sunny/1.0.8/sunny-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/swanky-purse/1.0.8/swanky-purse-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/trontastic/1.0.8/trontastic-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/ui-darkness/1.0.8/ui-darkness-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/ui-lightness/1.0.8/ui-lightness-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/vader/1.0.8/vader-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/home/1.0.8/home-1.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/rome/rome/0.9/rome-0.9.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jdom/jdom/1.0/jdom-1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 8.x Runtime">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.jsf;jst.web"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_25">
